--- a/src/templates/post/post_list.html
+++ b/src/templates/post/post_list.html
@@ -5,17 +5,29 @@
         <div class="row">
             {% for object in object_list %}
                     <div class="col-4">
-                    <a href="{{ object.get_absolute_url }}">
+                    
                     <br>
                     </br>
                 <div class="card" style="width: 18rem;">
                     <img src="{{ object.thumbnail.url }}" class="card-img-top" alt="...">
                 <div class="card-body">
+                        <a href="{{ object.get_absolute_url }}">
                         <h5 class="card-title">{{object.title}}</h5>
-                        <p class="card-text">{{ object.content|truncatechars:9 }}</p>
+                        </a>
+                        <p class="card-text">{{ object.content|truncatechars:10 }}</p>
+                </hr>
+                        <p>
+                            <span><i class="fas fa-thumbs-up ml-2"> </i>{{ object.get_like_count }}</span>
+                            <span><i class="fas fa-eye ml-2"> </i>{{ object.get_view_count }}</span>
+                            <span><i class="fas fa-comments ml-2"> </i>{{ object.get_comment_count }}</span>
+                        </p>
+                        <p class="card-text">
+                            Posted {{ object.publish_date|timesince }} ago
+
+                        </p>
                 </div>
                 </div>
-                </a>
+                
                     </div>
             {% endfor %}
         </div>
