--- a/src/templates/post/post_detail.html
+++ b/src/templates/post/post_detail.html
@@ -1,9 +1,43 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
-    <h1>Post datail View</h1>
-    {{object.title}}
+
+<hr/>
+
+<div class="row">
+<div class="col-4 offset-4">
+<div class="card" style="padding: 10px;">
+    <h1>{{object.title}}</h1>
+    <img src="{{ object.thumbnail.url }}" class="card-img-top" alt="...">
+
+    <hr/>
+
+    <div>
+        <span><i class="fas fa-comment ml-2"></i>{{ object.get_comment_count }} </span>
+        <span><i class="fas fa-eye ml-2"></i>{{ object.get_view_count }}</span>
+        <span><i class="fas fa-thumbs-up ml-2"></i>{{ object.get_like_count }}</span>
+        <span class="float-rigth">Posted {{ object.publish_date|timesince }} ago</span>
+   </div>
+
+   <hr/>
+
+   <div style="padding: 10px;">
+   <p>{{ object.content }}</p>
+   </div>
+
+   <hr/>
+
+   <div>
+       <h4>Enjoy this post? give it a like</h4>
+
+       <a class="text-muted" href="{{ object.get_like_url }}">
+           <i class="fas fa-thumbs-up fa-lg"></i>
+           {{ object.get_like_count }}
+       </a>
+   </div>
+    
+</div>
+</div>
 </div>
 
 {% endblock content %}
