--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Interns</title>
     <link href="{% static './base.css' %}" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="https://blogandweb.com/wp-content/uploads/2008/12/blogger-ibrandify.png">
+    <link rel="shortcut icon" href="https://a.slack-edge.com/80588/marketing/img/icons/icon_slack_hash_colored.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     
