--- a/src/templates/static/base.css
+++ b/src/templates/static/base.css
@@ -1,6 +1,6 @@
 body {
   background-color: #3b5998;
-  color: #fff;
+  color: rgb(228, 224, 224);
   font-family: "Helvetica", Arial, sans-serif;
 }
 .contenido {
