--- a/src/templates/post/post_detail.html
+++ b/src/templates/post/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -29,11 +30,31 @@
 
    <div>
        <h4>Enjoy this post? give it a like</h4>
-
        <a class="text-muted" href="{{ object.get_like_url }}">
            <i class="fas fa-thumbs-up fa-lg"></i>
            {{ object.get_like_count }}
        </a>
+       <hr/>
+       {% if request.user.is_authenticated %}
+       <h4>leave a comment below</h4>
+       <form method="POST">
+           {% csrf_token %}
+           {{ form|crispy}}
+           <button class="btn btn-primary" type="submit">Comentar</button>
+       </form>
+       <h5>Comentarios</h5>
+       {% for comment in object.comments %}
+        <div>
+            <p>{{ comment.content }}
+            <br />
+            <small>{{ comment.timestamp|timesince }} ago</small>
+            </p>
+        </div>
+        <hr />
+        {% endfor %}
+        {% else %}
+        <a href="{% url 'account_login' %}" class="btn btn-primary btn-block">login to comment</a>
+        {% endif %}
    </div>
     
 </div>
