--- a/src/templates/static/base.css
+++ b/src/templates/static/base.css
@@ -1,7 +1,5 @@
 body {
-  background-color: #3b5998;
-  color: rgb(228, 224, 224);
-  font-family: "Helvetica", Arial, sans-serif;
+  background-color: #69d5ca;
 }
 .contenido {
   width: 500px;
