--- a/src/templates/post/post_form.html
+++ b/src/templates/post/post_form.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
+    <center>
     {% extends "base.html" %}
 
     
     {% block content %}
-    <div class="container">
+    <br/>
+    <div class="container" text-align="center">
         <h1 >Agregar Post</h1>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
@@ -23,6 +25,7 @@
     </div>
     
     {% endblock content %}
+    </center>
     
 </body>
 </html>
